--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "sass-loader": "^10.1.1"
     },
     "dependencies": {
+        "luxon": "^1.26.0",
         "react-router-dom": "^5.2.0"
     }
 }
