--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "luxon": "^1.26.0",
+        "moment": "^2.29.1",
         "react-router-dom": "^5.2.0"
     }
 }
