--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/homepage.js": "/js/homepage.js?id=9b86383ddb9089428a50",
-    "/css/books.css": "/css/books.css?id=8f6f9ac98e4779048fb9"
+    "/js/homepage.js": "/js/homepage.js?id=db55d38bf6c8bc2f3451",
+    "/css/flamel-main.css": "/css/flamel-main.css?id=e901f9ef2b5e4fe125bb"
 }
